--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Good morning, Kikay!!</h1>
+        <h1>Good morning, Kikay!</h1>
         <p><i>"Proverbs 3:5 - Trust in the Lord with all your heart and lean not on your own understanding."</i></p>
     </div>
     <script src="script.js"></script>
