--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Good Morning Greeting</title>
+    <title>Good Day Greeting</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Good morning, Kikay!</h1>
+    <div class="greeting-container">
+        <img src="https://media.giphy.com/media/3o7aD3sy6KxUdBQ85q/giphy.gif?cid=790b7611at1ha3kknk3kwt89mmh4msotu5t5u65wppztqhzp&ep=v1_gifs_search&rid=giphy.gif&ct=g" alt="Funny greeting gif" class="greeting-gif">
+        <h1 class="greeting-text">Good morning, Kikay!</h1>
         <p><i>"Proverbs 3:5 - Trust in the Lord with all your heart and lean not on your own understanding."</i></p>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
